--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,4 @@ prodConnectionString=jdbc:mysql://localhost:3306/prod?serverTimezone=
 testConnectionString=jdbc:mysql://localhost:3306/test?serverTimezone=
 login=root
 password=rootroot
+discountPercent=5
